objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Plan Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityComments__c</fullName>
        <inlineHelpText>Auto populates with the first 255 characters of the Comments field.</inlineHelpText>
        <label>Activity Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityDateProxy__c</fullName>
        <inlineHelpText>Proxy Date Field to do rollups and other reporting operations on the Task when OOB Activity Date Field is not available.</inlineHelpText>
        <label>ActivityDateProxy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivityId__c</fullName>
        <formula>CaseSafeId( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActivityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityPoints__c</fullName>
        <description>Populated by Process Builder based on Criteria set by sales management</description>
        <inlineHelpText>This field is read-only and populated by an automated process that assigns points based on criteria that can vary and is set by sales management. If you feel the points are incorrect, update the activity record and the points will recalculate when saved.</inlineHelpText>
        <label>Activity Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivitySource__c</fullName>
        <description>Captures the Source of the Activity</description>
        <label>Activity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artemus</fullName>
                </value>
                <value>
                    <fullName>BlackBerryCRM</fullName>
                </value>
                <value>
                    <fullName>Broadridge</fullName>
                </value>
                <value>
                    <fullName>Civicomm</fullName>
                </value>
                <value>
                    <fullName>FI360</fullName>
                </value>
                <value>
                    <fullName>GlobalConnect</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
                <value>
                    <fullName>Harte Hanks</fullName>
                </value>
                <value>
                    <fullName>Outlook Integration</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>User Created</fullName>
                </value>
                <value>
                    <fullName>Process CPE</fullName>
                </value>
                <value>
                    <fullName>Outlook Email Svc</fullName>
                </value>
                <value>
                    <fullName>Salesforce1</fullName>
                </value>
                <value>
                    <fullName>Seismic</fullName>
                </value>
                <value>
                    <fullName>Digital Campaign</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Break Out</fullName>
                </value>
                <value>
                    <fullName>Small Conf. Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivitySubType__c</fullName>
        <description>The dependent field on Type IC to drive value visibility</description>
        <inlineHelpText>Select a Type field to view valid Sub Types</inlineHelpText>
        <label>Activity Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActivityType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Request</fullName>
                </value>
                <value>
                    <fullName>Product/Promotional</fullName>
                </value>
                <value>
                    <fullName>Follow-Up/Service</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                </value>
                <value>
                    <fullName>Other/Voicemail</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>Used to control the Sub Type field and not displayed in the UI. The out of box field Type is displayed in the UI.</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignDate__c</fullName>
        <label>Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_IDs__c</fullName>
        <externalId>true</externalId>
        <label>Campaign IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Names__c</fullName>
        <label>Campaign Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CanStayOpen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CanStayOpen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSubject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContCount__c</fullName>
        <label>ContCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Dummy Updates</description>
        <inlineHelpText>For Dummy Updates</inlineHelpText>
        <label>DTFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <description>Used to migrate historical data</description>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for migrating historical data</description>
        <label>Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalConnectId__c</fullName>
        <description>Global Connect Id</description>
        <externalId>true</externalId>
        <label>Global Connect Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastAssignedOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the owner of the activity before a transfer of a parent object (whatId) so that the activity can be reassigned back to the owner after the transfer.  This should not be exposed to users.</description>
        <label>Last Assigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RetainOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastFA_AffiliateMeetingDate__c</fullName>
        <label>Last FA/Affiliate Meeting Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRecord__c</fullName>
        <formula>HYPERLINK('https://secure-slsomxuxa.crmondemand.com/OnDemand/user/TaskDetail?OMRET0=ActivitiesList%3fActivitiesList.LAYOUT%3dTaskList%2520HomeList%26OMTGT%3dActivitiesList%26OMTHD%3dshowlist&amp;TaskDetailForm.Id=' + SynergyRowId__c +'&amp;OCTYPE=Approval&amp;OMTGT=TaskDetailForm&amp;OMTHD=ActivityDetailNav&amp;OMCBO=Action', SynergyRowId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarkForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used in a process to batch delete activities. The box is checked by sales people who have open activities assigned to them that they ultimately can not act on. Also used by Civicomm if they accidentally create an incorrect activity.</description>
        <inlineHelpText>Select this box if you would like a periodic process to run and delete the activity.</inlineHelpText>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarsOfficeId__c</fullName>
        <externalId>true</externalId>
        <label>Mars Office Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialsandPresentations__c</fullName>
        <label>Materials and Presentations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofActivities__c</fullName>
        <description>Power of One field to aid in reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OportunitySynergyRowId__c</fullName>
        <description>Temporary Field for DT rework</description>
        <externalId>true</externalId>
        <label>OportunitySynergyRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerChannelFormula__c</fullName>
        <formula>Owner:User.ActivityChannelName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Channel Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerChannelId__c</fullName>
        <formula>Owner:User.ActivityChannelId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Channel Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerChannel__c</fullName>
        <label>Owner Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>$User.FirstName  &amp;  " "  &amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRegionMARS__c</fullName>
        <description>Populated with a trigger based on the owner's region.</description>
        <label>Owner Region MARS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRole__c</fullName>
        <label>Owner Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritoryFormula__c</fullName>
        <formula>Owner:User.ActivityTerritoryName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Territory Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritoryId__c</fullName>
        <description>The owner's activity territory id at the time of activity creation</description>
        <label>Owner Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritoryMARS__c</fullName>
        <description>The owner activity territory based on the MARS name at the time of activity creation</description>
        <label>Owner Territory MARS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerTerritory__c</fullName>
        <label>Owner Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerUserId__c</fullName>
        <label>OwnerUserId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerZoneFormula__c</fullName>
        <formula>Owner:User.ActivityZoneId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Zone Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerZone__c</fullName>
        <label>Owner Zone</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductList__c</fullName>
        <description>A Semicolon Separated Group of Product Ids.</description>
        <inlineHelpText>A Semicolon Separated Group of Product Ids.</inlineHelpText>
        <label>Product List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductsSelected__c</fullName>
        <description>Aggregate the Products selected into this one field comma separated</description>
        <inlineHelpText>A read-only field that aggregates the Products selected into this one field with comma separated values.</inlineHelpText>
        <label>Products Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Names of products associated with the activity; set by trigger</description>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RepContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep/Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestArtemusID__c</fullName>
        <description>Auto populated with the Artemus Request ID as it appears on the Opportunity record that was created for the PRCG CPE Process</description>
        <label>Artemus Request ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetURL__c</fullName>
        <label>RetURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortSubject__c</fullName>
        <description>Value manually entered by users and displayed as part of the Event creation n the Affiliate request process. It is also displayed on the Trumba calendar.</description>
        <inlineHelpText>This value appears on the Trumba Calendar.  Please enter the subject in the following format:  Affiliate, Speaker, Firm, Event Type</inlineHelpText>
        <label>Short Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate2__c</fullName>
        <description>Same as Start Date or Activity Date.  Used to enable group by in reports that display start date in column.</description>
        <formula>ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Same as Start Date or Activity Date.  Used to enable group by in reports that display start date in column.</inlineHelpText>
        <label>Start Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SynergyAccountId__c</fullName>
        <externalId>true</externalId>
        <label>SynergyAccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynergyContactId__c</fullName>
        <externalId>true</externalId>
        <label>SynergyContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynergyRowId__c</fullName>
        <description>Synergy Row Id</description>
        <externalId>true</externalId>
        <label>SynergyRowId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TaskHeader__c</fullName>
        <formula>text(Status) &amp; if( MarkForDeletion__c , " - Marked For Deletion","")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <externalId>true</externalId>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <formula>IF(  ISPICKVAL(Case__r.Type, 'Travel'), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeGroup__c</fullName>
        <formula>IF( ISPICKVAL(ActivityType__c , "Call") ,"Call", 
IF( ISPICKVAL(ActivityType__c , "Meeting") ,"Meeting","Other"
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USOffshoreActivityOwner__c</fullName>
        <description>This field is populated with the name of the Owner in the international Salesforce system</description>
        <label>US Offshore Activity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserModified__c</fullName>
        <label>User Modified</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <formula>TEXT( Product__r.ProductType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Region__c</fullName>
        <description>The logged in users' ActivityTerritoryMARSName__c  or ActivityRegionDept__c are equal to the region on the task.</description>
        <formula>if( ($User.ActivityTerritoryType__c = 'Region' &amp;&amp;  OwnerRegionMARS__c = $User.ActivityTerritoryMARSName__c) || ($User.ActivityTerritoryType__c = 'Territory' &amp;&amp;  OwnerRegionMARS__c = $User.ActivityTerritoryParentMARSName__c), TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Region</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>